--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,6 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="js/Chart.js"></script>
-    <script type="text/javascript" src="js/main.js">
-    
-    </script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
